--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express": "^4.18.0",
         "express-fileupload": "^1.3.1",
         "express-rate-limit": "^6.4.0",
+        "express-sitemap-xml": "^3.1.0",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "node-schedule": "^2.1.0",
